--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="tab-button" onclick="openTab(event, 'settings')">Settings</button>
         </div>
         <div id="search" class="tab-content active">
-            <input type="text" id="searchInput" placeholder="Search...">
+            <input type="text" id="searchInput" placeholder="Type your search...">
             <button id="searchButton" onclick="performSearch()">Search</button>
             <div id="results"></div>
         </div>
